add orders logic, clean code
