# internal/models/user.go
@@ -7,6 +7,12 @@ type User struct {
 	Password string `json:"password" gorm:"type:varchar(255)"`
 }
 
+type UserRegister struct {
+	Name     string `json:"name" `
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
 type Credentials struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
